Add svelte component, additional styles

--- a/views/home.pug
+++ b/views/home.pug
@@ -56,7 +56,27 @@ html(lang="en" class="bg-amber-50 border-t-4 border-emerald-700")
        
         article(class="my-5")
           h2 Speaking &amp; Writing
-          ul(id="svelteComponent" class="flex flex-wrap flex-row text-center space-x-4 space-y-4")
+          ul(id="svelteComponent" class="flex flex-wrap flex-row text-center space-x-4 space-y-4 p-5")
+           
+            li(class=" p-4 max-w-full bg-slate-50 rounded-lg border shadow-md sm:w-1/4 lg:w-1/4 lg:px-6 origin-bottom -rotate-2") 
+              a(href="https://docs.microsoft.com/en-us/microsoft-365/community/query-string-url-tricks-sharepoint-m365" target="_blank" rel="noreferrer")
+                header(class="text-3xl rounded-full shadow-md border-2 inline-block px-4 py-3") 📋 
+                h3(class="font-leaguespartan text-green-700 text-sm py-2") Microsoft.com M365 Community Docs
+                | Query String URL Tricks for SharePoint &amp; M365 
+              span(class="block text-gray-300 text-xl font-serif") 2022
+            
+            
+            li(class=" p-4 max-w-full bg-slate-50 rounded-lg border shadow-md sm:w-1/4 lg:w-1/4 lg:px-6 origin-bottom -rotate-4") 
+              header(class="text-2xl rounded-full shadow-md inline p-5") 📋 
+              h3(class="font-semibold italic") Microsoft.com M365 Community Docs
+              a(href="https://docs.microsoft.com/en-us/microsoft-365/community/query-string-url-tricks-sharepoint-m365" target="_blank" rel="noreferrer") Query String URL Tricks for SharePoint &amp; M365
+              | , 2022
+
+            li(class=" p-4 max-w-full bg-slate-50 rounded-lg border shadow-md sm:w-1/4 lg:w-1/4 lg:px-6 origin-top -rotate-7") 
+              header(class="text-2xl rounded-full shadow-md inline p-5") 📋 
+              h3(class="font-semibold italic") Microsoft.com M365 Community Docs
+              a(href="https://docs.microsoft.com/en-us/microsoft-365/community/query-string-url-tricks-sharepoint-m365" target="_blank" rel="noreferrer") Query String URL Tricks for SharePoint &amp; M365
+              | , 2022
 
         article(class="my-5")
           h2 Recent Coding Examples
