--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -76,7 +76,7 @@ h1 sup{
 
 
 h2{
-    @apply text-2xl text-emerald-700 font-leaguespartan    
+    @apply text-2xl text-emerald-700 font-leaguespartan mb-2   
 }
 
 
@@ -85,10 +85,38 @@ main p {
     @apply mb-5 text-lg
 }
 
-#svelteComponent li {
-    /* @apply flex-shrink p-8 max-w-full w-full sm:w-1/4 lg:w-1/4 lg:px-6 bg-white */
-    
+#svelteComponent{
+    @apply flex flex-wrap flex-row text-center space-x-4 space-y-4 p-5
 }
+
+#svelteComponent li {
+    @apply p-3 max-w-full bg-slate-50 rounded-lg border shadow-md sm:w-1/4 lg:w-1/4 lg:px-6 origin-bottom -rotate-2 transition hover:rotate-0
+}
+
+#svelteComponent li a header {
+    @apply text-3xl rounded-full shadow-md border-2 inline-block px-4 py-3
+}
+
+#svelteComponent li a h3 {
+    @apply font-leaguespartan text-green-700 text-sm py-2
+}
+
+#svelteComponent li a span {
+    @apply underline underline-offset-2
+}
+
+#svelteComponent li time {
+     @apply block text-gray-300 text-2xl font-serif 
+}
+
+
+
+
+
+
+
+
+
 
 
 /* Timeline JS styles */
