--- a/public/tailwind_patrickdoran.css
+++ b/public/tailwind_patrickdoran.css
@@ -468,30 +468,48 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-backdrop-sepia:  ;
 }
 
-.order-2 {
-  order: 2;
-}
-
-.order-1 {
-  order: 1;
-}
-
-.col-span-5 {
-  grid-column: span 5 / span 5;
-}
-
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+.col-span-7 {
+  grid-column: span 7 / span 7;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
+.col-span-8 {
+  grid-column: span 8 / span 8;
+}
+
+.col-span-10 {
+  grid-column: span 10 / span 10;
+}
+
+.col-span-9 {
+  grid-column: span 9 / span 9;
+}
+
+.col-start-2 {
+  grid-column-start: 2;
+}
+
+.col-start-1 {
+  grid-column-start: 1;
+}
+
+.col-start-3 {
+  grid-column-start: 3;
+}
+
+.col-start-4 {
+  grid-column-start: 4;
+}
+
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
 }
 
 .mx-auto {
@@ -499,21 +517,88 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
-.mx-20 {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
 .block {
   display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .w-36 {
   width: 9rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.auto-cols-max {
+  grid-auto-columns: -webkit-max-content;
+  grid-auto-columns: max-content;
+}
+
+.grid-flow-row-dense {
+  grid-auto-flow: row dense;
+}
+
+.auto-rows-max {
+  grid-auto-rows: -webkit-max-content;
+  grid-auto-rows: max-content;
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-9 {
+  grid-template-columns: repeat(9, minmax(0, 1fr));
+}
+
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-0 {
+  gap: 0px;
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-reverse > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 1;
+}
+
+.space-x-reverse > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 1;
 }
 
 .rounded-full {
@@ -533,9 +618,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(4 120 87 / var(--tw-border-opacity));
 }
 
-.bg-amber-50 {
+.bg-amber-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 251 235 / var(--tw-bg-opacity));
+  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .text-center {
@@ -557,19 +647,40 @@ Ensure the default browser behavior of the `hidden` attribute.
   src: url('./leaguespartan-bold-webfont.woff') format('woff');
 }
 
-main {
-  margin-left: 7rem;
-  margin-right: 7rem;
-  margin-top: 3.5rem;
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: repeat(7, minmax(0, 1fr));
+body {
+  /* @apply grid grid-flow-col grid-cols-12 mx-12 space-x-9 */
 }
 
-main > :not([hidden]) ~ :not([hidden]) {
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-  --tw-space-x-reverse: 1;
+header {
+  /* @apply pt-10 col-start-4 col-end-12 grid-rows-1 */
+}
+
+main {
+  /* @apply grid grid-flow-col grid-cols-7 mx-28 space-x-reverse space-x-16 mt-14 */
+  /* @apply col-start-4 col-end-12 row-start-2 */
+}
+
+header blockquote {
+  padding-top: 1.75rem;
+  text-align: right;
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+header blockquote i {
+  font-size: 1.125rem;
+  font-weight: 700;
+  line-height: 2.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(219 39 119 / var(--tw-text-opacity));
+}
+
+header blockquote time {
+  font-weight: 700;
+}
+
+header blockquote time span {
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* social media icons */
@@ -593,13 +704,17 @@ aside span {
   display: none;
 }
 
-header h2 {
+nav {
+  /* @apply col-start-1 col-end-4 pt-12 */
+}
+
+nav h2 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
   text-align: center;
 }
 
-header dl {
+nav dl {
   margin-top: 1.25rem;
   margin-bottom: 1.75rem;
   display: flex;
@@ -607,13 +722,13 @@ header dl {
   justify-content: center;
 }
 
-header dl > :not([hidden]) ~ :not([hidden]) {
+nav dl > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-header dt {
+nav dt {
   margin-bottom: 0.25rem;
   text-align: center;
   font-weight: 800;
@@ -621,7 +736,7 @@ header dt {
   color: rgb(4 120 87 / var(--tw-text-opacity));
 }
 
-header dd {
+nav dd {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   margin-left: auto;
@@ -639,29 +754,6 @@ header dd {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
-blockquote {
-  padding-top: 1.75rem;
-  text-align: right;
-  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-}
-
-blockquote i {
-  font-size: 1.125rem;
-  font-weight: 700;
-  line-height: 2.25rem;
-  --tw-text-opacity: 1;
-  color: rgb(219 39 119 / var(--tw-text-opacity));
-}
-
-blockquote time {
-  font-weight: 700;
-}
-
-blockquote time span {
-  font-weight: 400;
-  font-style: normal;
-}
-
 h1 {
   margin-bottom: 2.5rem;
   font-family: 'league_spartanbold', serif;
@@ -669,6 +761,10 @@ h1 {
   line-height: 1.15;
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
+  --tw-shadow-color: #065f46;
+  --tw-shadow: var(--tw-shadow-colored);
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 h1 span {
@@ -692,13 +788,33 @@ h2 {
   line-height: 2rem;
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
+  --tw-shadow-color: #065f46;
+  --tw-shadow: var(--tw-shadow-colored);
+  --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 main p {
   margin-bottom: 1.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+
+article {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(52 211 153 / var(--tw-bg-opacity));
+}
+
+article:nth-child(odd) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+/* Card component for recent speaking/writing */
 
 #svelteComponent {
   display: flex;
@@ -797,6 +913,26 @@ main p {
   line-height: 2rem;
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+details {
+  cursor: pointer;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+
+details:hover {
+  --tw-translate-x: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+summary {
+  display: flex;
+  align-items: center;
+  padding: 2.5rem;
 }
 
 /* Timeline JS styles */
