--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -7,62 +7,88 @@
     src: url('./leaguespartan-bold-webfont.woff') format('woff');
   }
 
-main {
-    @apply grid grid-flow-col grid-cols-7 mx-28 space-x-reverse space-x-16 mt-14
+
+body {
+    /* @apply grid grid-flow-col grid-cols-12 mx-12 space-x-9 */
+    
 }
+
+header {
+    
+    /* @apply pt-10 col-start-4 col-end-12 grid-rows-1 */
+
+    
+}
+
+
+
+main {
+    
+    /* @apply grid grid-flow-col grid-cols-7 mx-28 space-x-reverse space-x-16 mt-14 */
+    /* @apply col-start-4 col-end-12 row-start-2 */
+} 
+
+
+
+header blockquote {
+    @apply text-right font-serif pt-7
+}
+
+header blockquote i {
+    @apply text-pink-600 font-bold text-lg leading-9
+}
+
+header blockquote time {
+    @apply font-bold
+}
+
+header blockquote time span {
+    @apply font-normal not-italic
+}
+
+
 
 /* social media icons */
 aside{
     @apply fixed top-7 right-7
 }
 
-aside svg {
-    @apply mb-4 opacity-40 hover:opacity-60
+    aside svg {
+        @apply mb-4 opacity-40 hover:opacity-60
+    }
+
+    aside span {
+        @apply hidden
+    }
+
+nav {
+    /* @apply col-start-1 col-end-4 pt-12 */
 }
 
-aside span {
-    @apply hidden
-}
+    nav h2{
+        @apply my-5 text-center 
+    }
 
-header h2{
-    @apply my-5 text-center
-}
+    nav dl {
+        @apply my-5 mb-7 flex flex-wrap justify-center space-x-2
+    }
 
-header dl {
-    @apply my-5 mb-7 flex flex-wrap justify-center space-x-2
-}
+    nav dt{
+        @apply font-extrabold text-center mb-1 text-emerald-700 
+    }
 
-header dt{
-    @apply font-extrabold text-center mb-1 text-emerald-700
-}
+    nav dd{
+        @apply text-center font-mono inline-block align-middle px-2 py-0.5 my-1 mx-auto rounded-md bg-green-50
+    }
 
-header dd{
-    @apply text-center font-mono inline-block align-middle px-2 py-0.5 my-1 mx-auto rounded-md bg-green-50
-}
 
-blockquote {
-    @apply text-right font-serif pt-7
-}
-
-blockquote i {
-    @apply text-pink-600 font-bold text-lg leading-9
-}
-
-blockquote time {
-    @apply font-bold
-}
-
-blockquote time span {
-    @apply font-normal not-italic
-}
 
 
 
 
 
 h1{
-    @apply text-6xl text-emerald-700 mb-10 font-leaguespartan leading-[1.15]
-
+    @apply text-6xl text-emerald-700 mb-10 font-leaguespartan leading-[1.15] drop-shadow-md shadow-emerald-800
 }
 
 h1 span {
@@ -76,14 +102,23 @@ h1 sup{
 
 
 h2{
-    @apply text-2xl text-emerald-700 font-leaguespartan mb-2   
+    @apply text-2xl text-emerald-700 font-leaguespartan mb-2 drop-shadow-md shadow-emerald-800   
 }
 
 
 
 main p {
-    @apply mb-5 text-lg
+    @apply mb-5 text-lg bg-red-700
 }
+
+
+article{
+    @apply bg-emerald-400 my-14 odd:bg-slate-600
+}
+
+
+
+/* Card component for recent speaking/writing */
 
 #svelteComponent{
     @apply flex flex-wrap flex-row text-center space-x-4 space-y-4 p-5
@@ -110,7 +145,13 @@ main p {
 }
 
 
+details{
+    @apply bg-slate-50 border border-gray-900 cursor-pointer hover:translate-x-1
+}
 
+summary{
+    @apply flex items-center p-10
+}
 
 
 
