--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -7,28 +7,38 @@
     src: url('./leaguespartan-bold-webfont.woff') format('woff');
   }
 
+  html{
+      @apply bg-black
+  }
 
-body {
-    /* @apply grid grid-flow-col grid-cols-12 mx-12 space-x-9 */
-    
+body{
+    @apply bg-orange-50 border-t-8 border-t-cyan-900
 }
 
-header {
-    
-    /* @apply pt-10 col-start-4 col-end-12 grid-rows-1 */
-
-    
+#wrap{
+    @apply grid grid-cols-12 gap-x-12 mx-auto px-24 auto-rows-max pt-16
 }
 
-
+header {   
+    @apply col-start-4 col-span-9
+}
 
 main {
-    
-    /* @apply grid grid-flow-col grid-cols-7 mx-28 space-x-reverse space-x-16 mt-14 */
-    /* @apply col-start-4 col-end-12 row-start-2 */
+   @apply col-start-4 col-span-9
 } 
 
+footer{
+    @apply col-start-1 col-span-12
+}
 
+
+article{
+    @apply my-14 p-8 bg-sky-900 rounded-xl
+}
+
+article h2{
+    @apply text-gray-200 shadow-lg leading-tight
+}
 
 header blockquote {
     @apply text-right font-serif pt-7
@@ -62,11 +72,19 @@ aside{
     }
 
 nav {
-    /* @apply col-start-1 col-end-4 pt-12 */
+    @apply col-span-3 row-start-1 row-span-3
 }
 
     nav h2{
-        @apply my-5 text-center 
+        @apply my-5 text-center
+    }
+
+    nav em{
+        @apply text-center block 
+    }
+
+    nav em span{
+        @apply not-italic
     }
 
     nav dl {
@@ -74,7 +92,7 @@ nav {
     }
 
     nav dt{
-        @apply font-extrabold text-center mb-1 text-emerald-700 
+        @apply font-extrabold text-center mb-1 text-emerald-700 block
     }
 
     nav dd{
@@ -102,30 +120,28 @@ h1 sup{
 
 
 h2{
-    @apply text-2xl text-emerald-700 font-leaguespartan mb-2 drop-shadow-md shadow-emerald-800   
+    @apply text-4xl text-emerald-700 font-leaguespartan pb-9 drop-shadow-md shadow-emerald-800   
 }
 
 
 
 main p {
-    @apply mb-5 text-lg bg-red-700
+    @apply mb-5 text-lg
 }
 
 
-article{
-    @apply bg-emerald-400 my-14 odd:bg-slate-600
-}
+
 
 
 
 /* Card component for recent speaking/writing */
 
 #svelteComponent{
-    @apply flex flex-wrap flex-row text-center space-x-4 space-y-4 p-5
+    @apply grid grid-cols-9 text-center space-x-4 space-y-4
 }
 
 #svelteComponent li {
-    @apply p-3 max-w-full bg-slate-50 rounded-lg border shadow-md sm:w-1/4 lg:w-1/4 lg:px-6 origin-bottom -rotate-2 transition hover:rotate-0
+    @apply  p-5 col-span-3 bg-slate-50 rounded-lg border shadow-md origin-bottom -rotate-2 transition hover:rotate-0
 }
 
 #svelteComponent li a header {
@@ -143,6 +159,8 @@ article{
 #svelteComponent li time {
      @apply block text-gray-300 text-2xl font-serif 
 }
+
+
 
 
 details{
