--- a/views/home.pug
+++ b/views/home.pug
@@ -9,11 +9,11 @@ html(lang="en")
   aside 
     a(href="https://github.com/patd" target="_blank")
       span Patrick Doran's Github repos
-      <svg height="32" aria-hidden="true" viewBox="0 0 16 16" width="32"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg> 
+      <svg aria-hidden="true" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path></svg> 
 
     a(href="https://twitter.com/swearpointjs" target="_blank")
       span Patrick Doran on Twitter
-      <svg height="32" width="32" viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-13v1u17 r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr"><g><path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path></g></svg>
+      <svg viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-13v1u17 r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr"><g><path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path></g></svg>
 
     a(href="https://www.linkedin.com/in/patrickdoran/" target="_blank")
       span Patrick Doran's LinkedIn Profile
@@ -31,20 +31,25 @@ html(lang="en")
         span Patrick Doran 
         br
         | is a Front-End Developer 
-        span(class='text-7xl') &amp; 
+        span &amp; 
         | Interaction Designer
-        sup *
+        strong *
       
-        
-      p Patrick Doran designs fast user interfaces, codes modern JavaScript applications, sketches wireframes, and obsesses about usability and performance. 
-      p Lately, Patrick has spent a lot of time with Vue.js and SharePoint development, design and branding.
+      picture
+          source(srcset="patrick_doran_header_photo.webp" media="(min-width: 600px)" type="image/webp")
+          img(src="patrick_doran_header_photo.jpg" title="Photo of Patrick Doran. He's a web developer. In this photo he is wearing sunglasses and smiling")
+
+
+      //- p Patrick Doran builds and design fast user interfaces, codes modern JavaScript applications, sketches wireframes, and obsesses about usability and performance. 
+      //- p Lately, Patrick has spent a lot of time with Vue.js and SharePoint development, design and branding.
       
       blockquote
         i * 
-        em Patrick has been building and designing 
-          a(title='Follow this link for citation reference.' href='patrick_doran_work_history.jpg') on the web since 
-            time(datetime='1998-01') 1998 
-              span &#x1F4BE; 
+        em Patrick has been building and designing on the web since
+          a(title='Follow this link for citation reference.' href='patrick_doran_work_history.jpg')  
+            time(datetime='1998-01') 1998
+              span &nbsp; &#x1F4BE; 
+
 
     main(role="main")    
           
@@ -52,7 +57,7 @@ html(lang="en")
         h2 Speaking &amp; Writing
         ul(id="svelteComponent")
           
-      article
+      article(id="recentExamples")
         h2 Recent Coding Examples
         
         details
@@ -190,7 +195,6 @@ html(lang="en")
         h2 Professional History
         p The only <strike>var</strike> const is change.
         div(id="patrickdorantimeline")
-        hr
 
       article
             h2 About this website
@@ -205,9 +209,6 @@ html(lang="en")
               li A service worker is utilized in case you go offline. This is a Progessive Web App (PWA).
 
     nav
-        picture
-          source(srcset="patrick_doran_header_photo.webp" media="(min-width: 600px)" type="image/webp")
-          img(class="rounded-full w-36 mx-auto -hue-rotate-20 border-4 " src="patrick_doran_header_photo.jpg" title="Photo of Patrick Doran. He's a web developer. In this photo he is wearing sunglasses and smiling")
           
         h2 Specializing In
         dl
@@ -263,3 +264,21 @@ script.
 // if ('serviceWorker' in navigator) { navigator.serviceWorker.register('service-worker.js'); }
 script(defer src='patrickdoran_svelte_bundle.js')
 script(defer src='patrickdoran_react_timeline.js')
+
+<div class="flex items-center m-2 fixed bottom-0 right-0 border border-gray-400 rounded p-2 bg-gray-300 text-pink-600 text-sm">
+    <svg class="h-6 w-auto inline" viewBox="0 0 80 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill="url(#paint0_linear)" fill-rule="evenodd" clip-rule="evenodd" d="M32 16C24.8 16 20.3 19.6 18.5 26.8C21.2 23.2 24.35 21.85 27.95 22.75C30.004 23.2635 31.4721 24.7536 33.0971 26.4031C35.7443 29.0901 38.8081 32.2 45.5 32.2C52.7 32.2 57.2 28.6 59 21.4C56.3 25 53.15 26.35 49.55 25.45C47.496 24.9365 46.0279 23.4464 44.4029 21.7969C41.7557 19.1099 38.6919 16 32 16ZM18.5 32.2C11.3 32.2 6.8 35.8 5 43C7.7 39.4 10.85 38.05 14.45 38.95C16.504 39.4635 17.9721 40.9536 19.5971 42.6031C22.2443 45.2901 25.3081 48.4 32 48.4C39.2 48.4 43.7 44.8 45.5 37.6C42.8 41.2 39.65 42.55 36.05 41.65C33.996 41.1365 32.5279 39.6464 30.9029 37.9969C28.2557 35.3099 25.1919 32.2 18.5 32.2Z"></path>
+        <defs>
+            <linearGradient id="paint0_linear" x1="3.5" y1="16" x2="59" y2="48" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#2298BD"></stop>
+                <stop offset="1" stop-color="#0ED7B5"></stop>
+            </linearGradient>
+        </defs>
+    </svg>
+    Current breakpoint
+    <span class="ml-1 sm:hidden md:hidden lg:hidden xl:hidden">xs</span>
+    <span class="ml-1 hidden sm:inline md:hidden font-extrabold">sm</span>
+    <span class="ml-1 hidden md:inline lg:hidden font-extrabold">md</span>
+    <span class="ml-1 hidden lg:inline xl:hidden font-extrabold">lg</span>
+    <span class="ml-1 hidden xl:inline font-extrabold">xl</span>
+</div>
