styling for larger screens

--- a/views/home.pug
+++ b/views/home.pug
@@ -33,7 +33,7 @@ html(lang="en")
         span Patrick Doran 
         br
         | is a Front-End Developer 
-        span &amp; 
+        mark &amp; 
         | Interaction Designer
         strong *
       
