--- a/views/tailwind.css
+++ b/views/tailwind.css
@@ -16,11 +16,14 @@ body{
 }
 
 menu{
-    @apply flex flex-row flex-nowrap justify-center gap-8 mb-5
+    @apply flex flex-row justify-center gap-8 mb-5 lg:fixed lg:top-5 lg:right-5 lg:flex-col
 }
+    menu li{
+        @apply lg:flex-wrap lg:col-span-1
+    }
 
     menu svg {
-        @apply mb-4 opacity-40 hover:opacity-70 w-8 h-8 hover:rotate-6 transition
+        @apply opacity-40 hover:opacity-70 w-8 h-8 hover:rotate-6 transition
     }
 
     menu span {
@@ -54,23 +57,30 @@ h2{
 }
 
 header {
-    @apply mb-10 px-10
+    @apply mb-10 px-10 lg:grid lg:grid-cols-7
 }
+    header h1{
+        @apply  lg:row-span-1 lg:col-start-3 lg:col-span-4 lg:text-left
+    }
+
+    header h1 span{
+        @apply lg:text-6xl
+    }
 
     header picture{
-        @apply mb-5 block 
+        @apply mb-5 block lg:row-span-2 lg:col-start-1 lg:row-start-1 lg:col-span-2
     }
 
     header picture img {
-        @apply rounded-full w-36 mx-auto border-4 border-emerald-600 hover:-rotate-12 transition ease-in-out
+        @apply rounded-full w-36 lg:w-44 lg:mr-10 mx-auto border-4 border-emerald-600 hover:-rotate-12 transition ease-in-out
     }
 
     header p {
-        @apply text-slate-900 mb-5
+        @apply text-slate-900 mb-5 
     }
 
     header blockquote {
-        @apply text-center font-serif text-slate-600
+        @apply text-center lg:text-left font-serif text-slate-600 lg:row-span-1 lg:col-start-3 lg:col-span-4
     }
 
     header blockquote i {
