--- a/views/home.pug
+++ b/views/home.pug
@@ -160,7 +160,7 @@ html(lang="en")
 
 
       
-      article
+      article(id="history")
         h2 Professional History
         p The only <strike>var</strike> const is change.
         div(id="patrickdorantimeline")
